--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,10 +7,9 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Classify Bear Images 🐻</div>
+    <div class='title'>Classify Human Emotions!</div>
     <p>
-      Use images of <strong>teddy</strong> bears, <strong>black</strong> bears, <strong>grizzly</strong> bears, or
-      all three!
+      Use images of <strong>happy</strong> people, <strong>sad</strong> people, <strong>shocked</strong> people, or <strong>angry</strong> people!
     </p>
     <div class='content'>
       <div class='no-display'>
